# adversarial-robustness-engine

./: CHANGELOG.md  CONTRIBUTING.md  README.md  fix_flake8.py  pyproject.toml
.github/workflows/: ci.yml
adversarial_robustness/: .gitignore  LICENSE  setup.cfg
adversarial_robustness/configs/: default.yaml  experiment_fgsm.yaml
adversarial_robustness/scripts/: run_benchmark.py
adversarial_robustness/src/adversarial_robustness/attacks/: base_attack.py  fgsm.py  patch_attack.py
adversarial_robustness/src/adversarial_robustness/defenses/: __init__.py  adversarial_training.py
adversarial_robustness/src/adversarial_robustness/evaluation/: __init__.py
adversarial_robustness/src/adversarial_robustness/utils/: config.py  logger.py
adversarial_robustness/tests/: conftest.py  pytest_compat.py
adversarial_robustness/tests/unit/: test_attacks.py  test_defenses.py  test_metrics.py
src/adversarial_robustness/: __init__.py  cli.py
src/adversarial_robustness/attacks/: __init__.py  base_attack.py  fgsm.py  patch_attack.py  pgd.py
src/adversarial_robustness/defenses/: __init__.py  adversarial_training.py  base_defense.py  denoiser.py
src/adversarial_robustness/evaluation/: __init__.py  benchmarker.py  metrics.py
src/adversarial_robustness/models/: __init__.py  base_model.py  dummy_model.py
src/adversarial_robustness/utils/: __init__.py  config.py  logger.py  tensor_ops.py
tests/: conftest.py  pytest_compat.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_attacks.py  test_config.py  test_defenses.py  test_metrics.py  test_models.py
