[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-robustness-engine"
version = "1.0.0"
description = "Defense framework protecting safety-critical computer vision models from adversarial attacks"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Adversarial Robustness Team" }]
requires-python = ">=3.9"
keywords = ["adversarial-ml", "robustness", "computer-vision", "deep-learning", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
# Core deps: no torch — tests run on pure NumPy backend (zero GPU required)
# torch is optional for production model wrapping
dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

[project.scripts]
are-evaluate  = "adversarial_robustness.cli:evaluate"
are-train     = "adversarial_robustness.cli:train"
are-benchmark = "adversarial_robustness.cli:benchmark"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests that require a GPU",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true